en proceso de persistencia de id

--- a/ProyectoPracticaII/Client/Pages/Index.razor
+++ b/ProyectoPracticaII/Client/Pages/Index.razor
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Components.Authorization; 
 @using ProyectoPracticaII.Client.extensiones;
 @inject AuthenticationStateProvider autenticacionProvider; 
-@attribute [Authorize(Roles = "UsuarioRegistrado")]
+@attribute [Authorize]
 @inject NavigationManager NavManager
 
  
