--- a/ProyectoPracticaII/Client/Pages/PTaller/EditarTaller.razor
+++ b/ProyectoPracticaII/Client/Pages/PTaller/EditarTaller.razor
@@ -1,7 +1,12 @@
 ﻿@page "/PTaller/EditarTaller/{TallerId:int}"
+@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization;
 @using ProyectoPracticaII.Client.Models;
 @inject IHttpService http
 @inject NavigationManager NavigatorManager
+@inject AuthenticationStateProvider autenticacionProvider;
+@attribute [Authorize(Roles = "UsuarioRegistrado")]
+@inject NavigationManager NavManager 
 
 
 
