--- a/ProyectoPracticaII/Client/Pages/PMotocicletas/EditarMoto.razor
+++ b/ProyectoPracticaII/Client/Pages/PMotocicletas/EditarMoto.razor
@@ -1,7 +1,12 @@
 ﻿@page "/PMotocicletas/EditarMoto/{MotoId:int}"
+@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization;
 @using ProyectoPracticaII.Client.Models;
 @inject IHttpService http
 @inject NavigationManager NavigatorManager
+@inject AuthenticationStateProvider autenticacionProvider;
+@attribute [Authorize(Roles = "UsuarioRegistrado")]
+@inject NavigationManager NavManager
 
 
 
