--- a/ProyectoPracticaII/Client/Pages/Index.razor
+++ b/ProyectoPracticaII/Client/Pages/Index.razor
@@ -227,8 +227,7 @@
             <p>Aquí encontraras los talleres top de tu ciudad</p>
 
             <div class="boton-2">
-
-                <input type="button" name="submit" class="btn-2" value="Ir ranking de Talleres">
+                <a class="btn-2" href="/PTallerTop/LTallerTop"> Ir al ranking</a>
             </div>
         </div>
 
