--- a/ProyectoPracticaII/Client/Pages/PMotocicletas/ListaMotocicletas.razor
+++ b/ProyectoPracticaII/Client/Pages/PMotocicletas/ListaMotocicletas.razor
@@ -48,7 +48,8 @@
     <br />
     <div class="btnCentrado">
         <a class="btnCrear" href="/PMotocicletas/CrearMoto"> REGISTRAR UNA NUEVA MOTO</a>
-        
+        <br/> 
+        <button class="btnCrear" @onclick="Read"> Cargar lista</button>
     </div>
    
     <div id="main-container">
@@ -156,7 +157,7 @@
     {
         base.OnInitialized();
 
-            Read();
+        
         
 
        
