--- a/ProyectoPracticaII/Client/Pages/PBTaller/ReporteOpinion.razor
+++ b/ProyectoPracticaII/Client/Pages/PBTaller/ReporteOpinion.razor
@@ -1,4 +1,4 @@
-﻿@page "/ReporteOpinion/{login:int}/{taller:int}/{opinion:int}"
+﻿@page "/ReporteOpinion"
 @using ProyectoPracticaII.Client.Models;
 @inject IHttpService http
 @inject NavigationManager NavigatorManager
@@ -61,10 +61,8 @@
     <InputNumber @bind-Value=NuevoReporteOpinion.IdOpinion style="width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputNumber>
 
-    <label>idReporte</label>
 
-    <InputNumber @bind-Value=NuevoReporteOpinion.IdReporte style="width: 100%;
-    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputNumber>
+  
 
     <label>Comentario</label>
 
@@ -114,7 +112,7 @@
 
     public async Task CrearReporteOpinion(ReportesOpinione ReportesOpinione)
     {
-        var resultado = await http.Post<ReportesOpinione>("api/ReporteOpiniones", NuevoReporteOpinion);
+        var resultado = await http.Post<ReportesOpinione>("api/ReporteOP", NuevoReporteOpinion);
         if (resultado.Error)
         {
             var body = resultado.HttpResponseMessage;
