--- a/ProyectoPracticaII/Client/Pages/Opinion/NuevaOpinion.razor
+++ b/ProyectoPracticaII/Client/Pages/Opinion/NuevaOpinion.razor
@@ -1,7 +1,7 @@
 ﻿@using ProyectoPracticaII.Client.Models;
 @inject IHttpService http
 @inject NavigationManager NavigatorManager
-@page "/opinion/{taller:int}"
+@page "/Opinion/NuevaOpinion/{taller:int}"
 
 <!DOCTYPE html>
 <html lang="en">
