--- a/ProyectoPracticaII/Client/Pages/Opinion/ReporteOpinion.razor
+++ b/ProyectoPracticaII/Client/Pages/Opinion/ReporteOpinion.razor
@@ -1,4 +1,4 @@
-﻿@page "/ReporteOpinion"
+﻿@page "/Opinion/ReporteOpinion"
 @using ProyectoPracticaII.Client.Models;
 @inject IHttpService http
 @inject NavigationManager NavigatorManager
