--- a/ProyectoPracticaII/Client/Pages/MenuLogin.razor.css
+++ b/ProyectoPracticaII/Client/Pages/MenuLogin.razor.css
@@ -1,86 +1,276 @@
-﻿* {
-    box-sizing: border-box;
-}
+﻿@media only screen and (max-width: 600px) {
+    /* Ajusta los estilos para pantallas pequeñas */
+    * {
+        box-sizing: border-box;
+    }
 
-.Contenedor {
-    padding: 140px;
-    
-}
+    .Contenedor {
+        padding: 140px;
+    }
 
-.Titulo1 {
-    text-align: center;
-    font-size: 2cm;
-    color: white;
-}
-
-.Bienvenido {
-    text-align: center;
-    font-size: 1cm;
-    color: white;
-}
-
-.Astyle {
-    text-align: center;
-    font-size: 1rem;
-    margin: auto;
-    padding: 0rem;
-    border: red solid 10px;
-    height: 50px;
-    width: 30%;
-    background-color: red;
-    color: white;
-    border-radius: 2em;
-    outline: 2px solid red;
-    outline-offset: 3px;
-    transition: all .3s ease;
-    justify-content: center;
-    display: flex;
-    text-decoration: none;
-}
-
-    .Astyle:hover {
-        background-color: #bd0003;
+    .Titulo1 {
+        text-align: center;
+        font-size: 2cm;
         color: white;
-        box-shadow: 0 0 5px #bd0003,0 0 20px #bd0003, 0 0 60px #bd0003, 0 0 150px #bd0003;
     }
 
+    .Bienvenido {
+        text-align: center;
+        font-size: 1cm;
+        color: white;
+    }
+
+    .Astyle {
+        text-align: center;
+        font-size: 1rem;
+        margin: auto;
+        padding: 0rem;
+        border: red solid 10px;
+        height: 50px;
+        width: 30%;
+        background-color: red;
+        color: white;
+        border-radius: 2em;
+        outline: 2px solid red;
+        outline-offset: 3px;
+        transition: all .3s ease;
+        justify-content: center;
+        display: flex;
+        text-decoration: none;
+    }
+
+        .Astyle:hover {
+            background-color: #bd0003;
+            color: white;
+            box-shadow: 0 0 5px #bd0003,0 0 20px #bd0003, 0 0 60px #bd0003, 0 0 150px #bd0003;
+        }
 
 
-.VideoFondo {
-    height: 720px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: -2;
-}
 
-    .VideoFondo video {
-        object-fit: cover;
+    .VideoFondo {
+        height: 720px;
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
-        height: 100%;
+        z-index: -2;
     }
 
-.dark-overlay {
-    height: 720px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: -2;
-    background-color: rgba(0, 0, 0, 0.8);
-    z-index: -1;
+        .VideoFondo video {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+
+    .dark-overlay {
+        height: 720px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: -2;
+        background-color: rgba(0, 0, 0, 0.8);
+        z-index: -1;
+    }
+
+    Footer {
+        color: #bd0003;
+        background-color: black;
+        text-align: center;
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        left: 0;
+        padding: 2rem 8%;
+        display: flex;
+        flex-direction: column;
+    }
+
 }
 
-Footer {
-    color: #bd0003;
-    background-color: black;
-    text-align: center;
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    padding: 2rem 8%;
-    display: flex;
-    flex-direction: column;
+/* Estilos para pantallas medianas */
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+    /* Ajusta los estilos para pantallas medianas */
+    * {
+        box-sizing: border-box;
+    }
+
+    .Contenedor {
+        padding: 140px;
+    }
+
+    .Titulo1 {
+        text-align: center;
+        font-size: 2cm;
+        color: white;
+    }
+
+    .Bienvenido {
+        text-align: center;
+        font-size: 1cm;
+        color: white;
+    }
+
+    .Astyle {
+        text-align: center;
+        font-size: 1rem;
+        margin: auto;
+        padding: 0rem;
+        border: red solid 10px;
+        height: 50px;
+        width: 30%;
+        background-color: red;
+        color: white;
+        border-radius: 2em;
+        outline: 2px solid red;
+        outline-offset: 3px;
+        transition: all .3s ease;
+        justify-content: center;
+        display: flex;
+        text-decoration: none;
+    }
+
+        .Astyle:hover {
+            background-color: #bd0003;
+            color: white;
+            box-shadow: 0 0 5px #bd0003,0 0 20px #bd0003, 0 0 60px #bd0003, 0 0 150px #bd0003;
+        }
+
+
+
+    .VideoFondo {
+        height: 720px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: -2;
+    }
+
+        .VideoFondo video {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+
+    .dark-overlay {
+        height: 720px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: -2;
+        background-color: rgba(0, 0, 0, 0.8);
+        z-index: -1;
+    }
+
+    Footer {
+        color: #bd0003;
+        background-color: black;
+        text-align: center;
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        left: 0;
+        padding: 2rem 8%;
+        display: flex;
+        flex-direction: column;
+    }
+
 }
+
+/* Estilos para pantallas grandes */
+@media only screen and (min-width: 1025px) {
+    /* Ajusta los estilos para pantallas grandes */
+    * {
+        box-sizing: border-box;
+    }
+
+    .Contenedor {
+        padding: 140px;
+    }
+
+    .Titulo1 {
+        text-align: center;
+        font-size: 2cm;
+        color: white;
+    }
+
+    .Bienvenido {
+        text-align: center;
+        font-size: 1cm;
+        color: white;
+    }
+
+    .Astyle {
+        text-align: center;
+        font-size: 1rem;
+        margin: auto;
+        padding: 0rem;
+        border: red solid 10px;
+        height: 50px;
+        width: 30%;
+        background-color: red;
+        color: white;
+        border-radius: 2em;
+        outline: 2px solid red;
+        outline-offset: 3px;
+        transition: all .3s ease;
+        justify-content: center;
+        display: flex;
+        text-decoration: none;
+    }
+
+        .Astyle:hover {
+            background-color: #bd0003;
+            color: white;
+            box-shadow: 0 0 5px #bd0003,0 0 20px #bd0003, 0 0 60px #bd0003, 0 0 150px #bd0003;
+        }
+
+
+
+    .VideoFondo {
+        height: 720px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: -2;
+    }
+
+        .VideoFondo video {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+
+    .dark-overlay {
+        height: 720px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: -2;
+        background-color: rgba(0, 0, 0, 0.8);
+        z-index: -1;
+    }
+
+    Footer {
+        color: #bd0003;
+        background-color: black;
+        text-align: center;
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        left: 0;
+        padding: 2rem 8%;
+        display: flex;
+        flex-direction: column;
+    }
+
+}
+
+
+
+
+
