--- a/ProyectoPracticaII/Client/Pages/PMotocicletas/CrearMoto.razor
+++ b/ProyectoPracticaII/Client/Pages/PMotocicletas/CrearMoto.razor
@@ -2,7 +2,8 @@
 @using Microsoft.AspNetCore.Authorization;
 @using Microsoft.AspNetCore.Components.Authorization;
 @using ProyectoPracticaII.Client.Models;
-@inject IHttpService http
+@inject HttpClient http
+@inject IHttpService Ihttp
 @inject NavigationManager NavigatorManager 
 @inject AuthenticationStateProvider autenticacionProvider;
 @attribute [Authorize(Roles = "UsuarioRegistrado")]
@@ -49,7 +50,7 @@
             <h4> CARGAR DATOS DE TU MOTO</h4>
             <label>IdUsuario</label>
 
-            <InputNumber @bind-Value=NuevaMotocicleta.IdUsuario style=" width: 100%;
+            <InputNumber @bind-Value=@IdUsuario readonly style=" width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"> Marca</InputNumber>
             <label>Marca</label>
             <InputText class="controls" @bind-Value=NuevaMotocicleta.Marca style=" width: 100%;
@@ -92,6 +93,7 @@
      @inject IJSRuntime JSRuntime
        string userPreferences;
     string storedUserPreferences;
+    string IdUsuario;
 
 
     private async Task Read()
@@ -149,13 +151,13 @@
    
     public async Task CrearMotoU(Motocicleta motocicleta)
     {
-        var resultado = await http.Post<Motocicleta>("api/Motocicleta", NuevaMotocicleta);
+        var resultado = await Ihttp.Post<Motocicleta>("api/Motocicleta", NuevaMotocicleta);
         if (resultado.Error)
         {
             var body = resultado.HttpResponseMessage;
 
         }
-        NavigatorManager.NavigateTo($"/PMotocicletas/ListaMotocicletas/");
+        NavigatorManager.NavigateTo($"/PMotocicletas/ListaMotocicletas/{IdUsuario}");
     }
 
   
