--- a/ProyectoPracticaII/Client/Pages/Perfil/FormUsuarios.razor
+++ b/ProyectoPracticaII/Client/Pages/Perfil/FormUsuarios.razor
@@ -35,24 +35,36 @@
         </section>
     </header>
     <section class="form-usuarios">
-        <EditForm Model="usuarios">
-            <h4>ACTUALIZAR LOS DATOS DE TU PERFIL</h4>
 
-            
-            <label>Nombre de usuario</label>
-            <InputText @bind-Value=usuarios.NombreUsuario style=" width: 100%;
-    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"> </InputText>
-            <label>Correo</label>
-            <InputText @bind-Value=usuarios.Correo style=" width: 100%;
-    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"> </InputText>
-            <label>Clave</label>
-            <InputText @bind-Value=usuarios.Clave style=" width: 100%;
+        <InputText @bind-Value=usuarios.Clave style=" width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;">Año</InputText>
-         
-      
-            <button class="btnC" @onclick="(()=>ActualizarUsuario(usuarios))">Actualizar</button>
-            <button class="btnC" @onclick="onCancel"> Cancelar</button>
-        </EditForm>
+
+        @if (usuarios.Clave == usuarios.Clave)
+        {
+            <EditForm Model="usuarios">
+                <h4>ACTUALIZAR LOS DATOS DE TU PERFIL</h4>
+
+
+
+                <label>Nombre de usuario</label>
+                <InputText @bind-Value=usuarios.NombreUsuario style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"> </InputText>
+                <label>Correo</label>
+                <InputText @bind-Value=usuarios.Correo style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"> </InputText>
+                <label>Clave</label>
+                
+
+
+                <button class="btnC" @onclick="(()=>ActualizarUsuario(usuarios))">Actualizar</button>
+                <button class="btnC" @onclick="onCancel"> Cancelar</button>
+            </EditForm>
+        }
+        else
+        {
+            <label>Ingrese la contraseña correctamente</label>
+        }
+
     </section>
 
     <br/>
