--- a/ProyectoPracticaII/Client/Pages/Perfil/MiPerfil.razor
+++ b/ProyectoPracticaII/Client/Pages/Perfil/MiPerfil.razor
@@ -65,7 +65,7 @@ else
 
         </div>
 
-            <button class="EditarPerfilBoton"><a href="/EditarPerfil/{login}">Editar Perfil</a></button>
+            <button class="EditarPerfilBoton"><a href="/Validacion">Editar Perfil</a></button>
     }
     
 
